--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wether_api</title>
 </head>
+
 <body>
     
 
-    
+    <script src="./script.js"></script>
 </body>
 </html>
