--- a/index.html
+++ b/index.html
@@ -6,9 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wether_api</title>
 </head>
-<body>
-    
+<body> 
 <h1>hello</h1>
+
+
+<body>
+    <h1>気象庁の天気予報WebAPI経由で表示<br>東京の詳細</h1>
+  
+    <table>
+        <tr id="publishingOffice">
+            <th>発表者</th>
+            <td></td>
+        </tr>
+        <tr id="reportDatetime">
+            <th>報告日時</th>
+            <td></td>
+        </tr>
+        <tr id="targetArea">
+            <th>対象地域</th>
+            <td></td>
+        </tr>
+        <tr id="today">
+            <th>今日の天気</th>
+            <td></td>
+        </tr>
+        <tr id="tomorrow">
+            <th>明日の天気</th>
+            <td></td>
+        </tr>
+        <tr id="dayAfterTomorrow">
+            <th>明後日の天気</th>
+            <td></td>
+        </tr>
+    </table>
+</body>
+</html>
+
+
+
+
+
 
 </body>
 </html>
