--- a/index.html
+++ b/index.html
@@ -7,27 +7,25 @@
     <title>wether_api</title>
 </head>
 
-<body>
-    <h1>気象庁の天気予報WebAPI経由で表示<br>東京の詳細</h1>
-  
-    <tablec class="wether">
-        <tr id="targetArea">
-            <th>対象地域さぁ</th>
+<body>  
+    <section class="wether-conteinar">
+        <div id="wether-targetArea">
+            <h1>対象地域さぁ</h1>
             <td></td>
-        </tr>
-        <tr id="today">
+        </div>
+        <tr id="wether-today">
             <th>今日の天気</th>
             <td></td>
         </tr>
-        <tr id="tomorrow">
+        <tr id="wether-tomorrow">
             <th>明日の天気</th>
             <td></td>
         </tr>
-        <tr id="dayAfterTomorrow">
+        <tr id="wether-dayAfterTomorrow">
             <th>明後日の天気</th>
             <td></td>
         </tr>
-    </tablec>
+    </section>
 
 
     <script src="./script.js"></script>
