夜中におはようございます！！ 全体のスペルミスだけ修正しました！！ 後からまたやります！！

--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wether_api</title>
+    <title>weather_api</title>
 </head>
 
 <body>  
-    <section class="wether-conteinar">
-        <div id="wether-targetArea">
+    <section class="weather-container">
+        <div id="weather-targetArea">
             <h1>対象地域さぁ</h1>
             <td></td>
         </div>
-        <tr id="wether-today">
-            <th>今日の天気</th>
+        <tr id="weather-today">
+            <th>今日の天気さぁ</th>
             <td></td>
         </tr>
-        <tr id="wether-tomorrow">
-            <th>明日の天気</th>
+        <tr id="weather-tomorrow">
+            <th>明日の天気さぁ</th>
             <td></td>
         </tr>
-        <tr id="wether-dayAfterTomorrow">
-            <th>明後日の天気</th>
+        <tr id="weather-dayAfterTomorrow">
+            <th>明後日の天気さぁ</th>
             <td></td>
         </tr>
     </section>
