1) reset.css追加 2) タグ名変更 3)htmlとscss作成しました。

--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>wether_api</title>
 </head>
 
-<body>  
-    <section class="wether-conteinar">
-        <div id="wether-targetArea">
-            <h1>対象地域さぁ</h1>
-            <td></td>
-        </div>
-        <tr id="wether-today">
-            <th>今日の天気</th>
-            <td></td>
-        </tr>
-        <tr id="wether-tomorrow">
-            <th>明日の天気</th>
-            <td></td>
-        </tr>
-        <tr id="wether-dayAfterTomorrow">
-            <th>明後日の天気</th>
-            <td></td>
-        </tr>
-    </section>
+<body>
+    <section class="wether">
 
+        <div class="wether-targetArea">
+            <h1>対象地域さぁ</h1>
+            <p></p>
+        </div>
+
+        <main class="wether-conteinar">
+            <div class="wether-today">
+                <h1>今日の天気</h1>
+                <p class="wether-fhoto">イラスト入る予定</p>
+            </div>
+            <div class="wether-tomorrow">
+                <h1>明日の天気</h1>
+                <p class="wether-fhoto">イラスト入る予定</p>
+            </div>
+            <div class="wether-dayAfterTomorrow">
+                <h1>明後日の天気</h1>
+                <p class="wether-fhoto">イラスト入る予定</p>
+            </div>
+
+        </main>
+    </section>
 
     <script src="./script.js"></script>
 
 </body>
+
 </html>
