--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         </main>
     </section>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./script.js"></script>
 
 </body>
