html修正。役割分担 具志堅さん⇨日付、3日間の天気（アイコンイメージ）　＋とぐる 金城⇨波、風

--- a/index.html
+++ b/index.html
@@ -21,15 +21,25 @@
         <main class="weather-conteinar">
             <div class="weather-today">
                 <h1>今日の天気</h1>
-                <p class="weather-fhoto">イラスト入る予定</p>
+                <img class="weather-fhoto" src="" alt="">
+                <p class="weather-wind">風</p>
+                <p class="weather-waves">波</p>
             </div>
+
+
             <div class="weather-tomorrow">
                 <h1>明日の天気</h1>
-                <p class="weather-fhoto">イラスト入る予定</p>
+                <img class="weather-fhoto" src="" alt="">
+                <p class="weather-wind">風</p>
+                <p class="weather-waves">波</p>
             </div>
+
+
             <div class="weather-dayAfterTomorrow">
                 <h1>明後日の天気</h1>
-                <p class="weather-fhoto">イラスト入る予定</p>
+                <img class="weather-fhoto" src="" alt="">
+                <p class="weather-wind">風</p>
+                <p class="weather-waves">波</p>
             </div>
 
         </main>
