波と風は終了👍

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
             <div class="weather-tomorrow">
                 <h1>明日の天気</h1>
                 <img class="weather-fhoto" src="" alt="">
-                <p class="weather-wind">風</p>
-                <p class="weather-waves">波</p>
+                <p class="weather-wind1">風</p>
+                <p class="weather-waves1">波</p>
             </div>
 
 
             <div class="weather-dayAfterTomorrow">
                 <h1>明後日の天気</h1>
                 <img class="weather-fhoto" src="" alt="">
-                <p class="weather-wind">風</p>
-                <p class="weather-waves">波</p>
+                <p class="weather-wind2">風</p>
+                <p class="weather-waves2">波</p>
             </div>
 
         </main>
