--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <section class="weather">
 
         <div class="weather-targetArea">
-            <h1>対象地域さぁ</h1>
+            <h1>天気予報さぁ</h1>
             <p></p>
         </div>
 
         <main class="weather-conteinar">
             <div class="weather-today">
                 <h1>今日の天気</h1>
+                <p></p>
+                <p class="weather-date">日付</p>
                 <img class="weather-fhoto" src="" alt="">
                 <p class="weather-wind">風</p>
                 <p class="weather-waves">波</p>
@@ -29,6 +31,8 @@
 
             <div class="weather-tomorrow">
                 <h1>明日の天気</h1>
+                <p></p>
+                <p class="weather-date">日付</p>
                 <img class="weather-fhoto" src="" alt="">
                 <p class="weather-wind">風</p>
                 <p class="weather-waves">波</p>
@@ -37,6 +41,8 @@
 
             <div class="weather-dayAfterTomorrow">
                 <h1>明後日の天気</h1>
+                <p></p>
+                <p class="weather-date">日付</p>
                 <img class="weather-fhoto" src="" alt="">
                 <p class="weather-wind">風</p>
                 <p class="weather-waves">波</p>
