日付表示済み

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="weather-tomorrow">
                 <h1>明日の天気</h1>
                 <p></p>
-                <p class="weather-date">日付</p>
+                <p class="weather-date1">日付</p>
                 <img class="weather-fhoto" src="" alt="">
                 <p class="weather-wind1">風</p>
                 <p class="weather-waves1">波</p>
@@ -44,7 +44,7 @@
             <div class="weather-dayAfterTomorrow">
                 <h1>明後日の天気</h1>
                 <p></p>
-                <p class="weather-date">日付</p>
+                <p class="weather-date2">日付</p>
                 <img class="weather-fhoto" src="" alt="">
                 <p class="weather-wind2">風</p>
                 <p class="weather-waves2">波</p>
