文字良い感じの幅にならない。。

--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
 
         <div class="weather-targetArea">
 
-            <h1>対象地域さぁ</h1>
+            <h1>天気予報さぁ</h1>
             <!-- <p></p> -->
 
         </div>
 
         <main class="weather-conteinar">
             <div class="weather-today">
-                <h1>今日の天気</h1>
-                <p></p>
-                <p class="weather-date">日付</p>
+                <h1>今日</h1>
+                <p class="area-weathers"></p>
                 <img class="weather-fhoto" src="" alt="">
                 <p class="weather-wind">風</p>
                 <p class="weather-waves">波</p>
@@ -32,20 +31,18 @@
 
 
             <div class="weather-tomorrow">
-                <h1>明日の天気</h1>
-                <p></p>
-                <p class="weather-date">日付</p>
-                <img class="weather-fhoto" src="" alt="">
+                <h1>明日</h1>
+                <p class="area-weathers1"></p>
+                <img class="weather-fhoto1" src="" alt="">
                 <p class="weather-wind1">風</p>
                 <p class="weather-waves1">波</p>
             </div>
 
 
             <div class="weather-dayAfterTomorrow">
-                <h1>明後日の天気</h1>
-                <p></p>
-                <p class="weather-date">日付</p>
-                <img class="weather-fhoto" src="" alt="">
+                <h1>明後日</h1>
+                <p class="area-weathers2"></p>
+                <img class="weather-fhoto2" src="" alt="">
                 <p class="weather-wind2">風</p>
                 <p class="weather-waves2">波</p>
             </div>
