背景の雲と文字が被って見えにくかったので背景の色調整して文字のカラーを黒にしました！ 画像はギリギリまで粘ります笑

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
         <main class="weather-conteinar">
             <div class="weather-today">
-                <h1>今日</h1>
+                <h1>現在</h1>
                 <p class="weather-date">日付</p>
                 <p class="area-weathers">天気</p>
-                <img class="weather-fhoto" src="" alt="">
+                <img class="weather-fhoto" src="./img/tenki_mark07_kaminari.png" alt="">
                 <p class="weather-wind">風</p>
                 <p class="weather-waves">波</p>
             </div>
@@ -38,7 +38,7 @@
                 <h1>明日</h1>
                 <p class="weather-date1">日付</p>
                 <p class="area-weathers1">天気</p>
-                <img class="weather-fhoto" src="" alt="">
+                <img class="weather-fhoto" src="./img/tenki_mark06_kurmoriame.png" alt="">
                 <p class="weather-wind1">風</p>
                 <p class="weather-waves1">波</p>
             </div>
@@ -47,8 +47,8 @@
             <div class="weather-dayAfterTomorrow">
                 <h1>明後日</h1>
                 <p class="weather-date2">日付</p>
-                <p class="area-weathers2"></p>
-                <img class="weather-fhoto2" src="" alt="">
+                <p class="area-weathers2">天気</p>
+                <img class="weather-fhoto2" src="./img/tenki_mark01_hare.png" alt="">
                 <p class="weather-wind2">風</p>
                 <p class="weather-waves2">波</p>
             </div>
