トグル休戦

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         <div class="weather-targetArea">
 
             <h1>天気予報さぁ</h1>
-            <!-- <p></p> -->
-
+            <!-- <div class="toggle-menu"> -->
+                <!-- <h1 id="intro_btn">天気予報さぁ</h1> -->
+                <!-- <p href="https://www.jma.go.jp/bosai/#pattern=forecast"></p>
+            </div> -->
         </div>
 
         <main class="weather-conteinar">
