--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 
         <div class="weather-targetArea">
 
-            <h1>天気予報さぁ</h1>
+            <h1>天気予報</h1>
             <!-- <div class="toggle-menu"> -->
                 <!-- <h1 id="intro_btn">天気予報さぁ</h1> -->
                 <!-- <p href="https://www.jma.go.jp/bosai/#pattern=forecast"></p>
             </div> -->
+
         </div>
 
         <main class="weather-conteinar">
