--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <section class="weather">
 
         <div class="weather-targetArea">
-
-            <h1>天気予報</h1>
+            <h1 class="fadeIn">天気予報</h1>
+            <!-- <h1>天気予報</h1> -->
             <!-- <div class="toggle-menu"> -->
-                <!-- <h1 id="intro_btn">天気予報さぁ</h1> -->
+                <!-- <h1 id="intro_btn">天気予報</h1> -->
                 <!-- <p href="https://www.jma.go.jp/bosai/#pattern=forecast"></p>
             </div> -->
 
@@ -31,7 +31,7 @@
                 <h1>現在</h1>
                 <p class="weather-date">日付</p>
                 <p class="area-weathers">天気</p>
-                <img class="weather-fhoto" src="./img/tenki_mark07_kaminari.png" alt="">
+                <img class="weather-fhoto" src="https://placehold.jp/150x150.png" alt="">
                 <p class="weather-wind">風</p>
                 <p class="weather-waves">波</p>
             </div>
@@ -41,7 +41,7 @@
                 <h1>明日</h1>
                 <p class="weather-date1">日付</p>
                 <p class="area-weathers1">天気</p>
-                <img class="weather-fhoto" src="./img/tenki_mark06_kurmoriame.png" alt="">
+                <img class="weather-fhoto1" src="https://placehold.jp/150x150.png" alt="">
                 <p class="weather-wind1">風</p>
                 <p class="weather-waves1">波</p>
             </div>
@@ -51,7 +51,7 @@
                 <h1>明後日</h1>
                 <p class="weather-date2">日付</p>
                 <p class="area-weathers2">天気</p>
-                <img class="weather-fhoto2" src="./img/tenki_mark01_hare.png" alt="">
+                <img class="weather-fhoto2" src="https://placehold.jp/150x150.png" alt="">
                 <p class="weather-wind2">風</p>
                 <p class="weather-waves2">波</p>
             </div>
